# outflows

./: .gitignore  Grid_halo.py  README.md  add_metallicities.py  add_sfr_radius.py  add_tng_sfr_hist.py  analyse_outflow_properties.py  backends.py  build_galaxy_db.py  config.py  config_parameters.yml  convergence_analyser.py  find_predecessor.py  find_progenitors.py  galaxy_shell_outflows.py  gaussian_outflow_selection.py  grid_tng_100.py  los_projection.py  plot_progenitor_evolution.py  plottin_deprecated.py  plotting.py  process_gas.py  pyproject.toml  quick_plotting.py  random_projection.py  retrieve_galaxy.py  serra_backend.py  sph_gridding.py  test_selection.py  testing.ipynb  tng_backend.py  tng_cosmo.py  utils.py  wind_mass_updater.py  write_halo_db.py
deprecated/: grid_tng_100.py
plotting/: __init__.py  config.py  correlations.py  histograms.py  observational.py  primitives.py  spatial_maps.py
tests/: conftest.py  test_backends.py  test_config.py  test_galaxy.py  test_outflow_selection.py  test_utils.py
